force-app/main/default/objects/B2BIntegration__c/B2BIntegration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>B2BIntegration</label>
</CustomObject>