force-app/main/default/objects/B2BIntegration__c/fields/Create_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Create_Opportunity__c</fullName>
    <label>Create Opportunity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>