force-app/main/default/objects/B2BIntegration__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <label>Password</label>
    <length>64</length>
    <type>Text</type>
</CustomField>