force-app/main/default/objects/B2BIntegration__c/fields/Update_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Update_Opportunity__c</fullName>
    <label>Update Opportunity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>